--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
           <div class="row portfolio-filter g-4">
             <div class="col-sm-6 col-lg-4 brand">
               <div class="portfolio-box rounded">
-                <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-1.jpg" alt="">
+                <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/image3.jpg" alt="">
                   <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/11" ></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
@@ -441,7 +441,7 @@
 
             <div class="col-sm-6 col-lg-4 design">
               <div class="portfolio-box rounded">
-                <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-2.jpg" alt="">
+                <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/image4.jpg" alt="">
                   <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/12"></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
@@ -452,7 +452,7 @@
             </div>
             <div class="col-sm-6 col-lg-4 artwork photos">
               <div class="portfolio-box rounded">
-                <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-3.jpg" alt="">
+                <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/image1.jpg" alt="">
                   <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/13"></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
@@ -463,7 +463,7 @@
             </div>
             <div class="col-sm-6 col-lg-4 artwork brand photos">
               <div class="portfolio-box rounded">
-                <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-4.jpg" alt="">
+                <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/image6.jpg" alt="">
                   <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/14"></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
@@ -475,8 +475,8 @@
 
             <div class="col-sm-6 col-lg-4 design">
               <div class="portfolio-box rounded">
-                <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-5.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/16"></a>
+                <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/image5.jpg" alt="">
+                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/15"></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
                       <span class="text-light">Category</span> </div>
@@ -487,8 +487,8 @@
 
             <div class="col-sm-6 col-lg-4 brand">
               <div class="portfolio-box rounded">
-                <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-6.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://harnishdesign.net/demo/html/simone/ajax/portfolio-ajax-project-6.html"></a>
+                <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/image8.jpg" alt="">
+                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/16"></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
                       <span class="text-light">Category</span> </div>
@@ -499,8 +499,8 @@
 
             <div class="col-sm-6 col-lg-4 design photos">
               <div class="portfolio-box rounded">
-                <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-7.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/15"></a>
+                <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/image9.jpg" alt="">
+                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/17"></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
                       <span class="text-light">Category</span> </div>
@@ -509,17 +509,17 @@
               </div>
             </div>
             <!-- NEW PROJECT BLOCK -->
-            <!-- <div class="col-sm-6 col-lg-4 design photos">
+            <div class="col-sm-6 col-lg-4 design photos">
               <div class="portfolio-box rounded">
-                <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-7.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://harnishdesign.net/demo/html/simone/ajax/portfolio-ajax-project-7.html"></a>
+                <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/image7.jpg" alt="">
+                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/18"></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
                       <span class="text-light">Category</span> </div>
                   </div>
                 </div>
               </div>
-            </div> -->
+            </div>
             <!-- END BLOCK -->
 
           </div>
