--- a/index.html
+++ b/index.html
@@ -432,8 +432,8 @@
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/image3.jpg" alt="">
                   <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/11" ></a>
                     <div class="portfolio-overlay-details">
-                      <h5 class="text-white fw-400">Project Title</h5>
-                      <span class="text-light">Category</span> </div>
+                      <h5 class="text-white fw-400">Image Recognition</h5>
+                      <span class="text-light">Machine Learning</span> </div>
                   </div>
                 </div>
               </div>
@@ -444,8 +444,8 @@
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/image4.jpg" alt="">
                   <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/12"></a>
                     <div class="portfolio-overlay-details">
-                      <h5 class="text-white fw-400">Project Title</h5>
-                      <span class="text-light">Category</span> </div>
+                      <h5 class="text-white fw-400">Youtube Bot</h5>
+                      <span class="text-light">Automation</span> </div>
                   </div>
                 </div>
               </div>
@@ -455,8 +455,8 @@
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/image1.jpg" alt="">
                   <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/13"></a>
                     <div class="portfolio-overlay-details">
-                      <h5 class="text-white fw-400">Project Title</h5>
-                      <span class="text-light">Category</span> </div>
+                      <h5 class="text-white fw-400">Bet Site Automation</h5>
+                      <span class="text-light">Automation</span> </div>
                   </div>
                 </div>
               </div>
@@ -466,8 +466,8 @@
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/image6.jpg" alt="">
                   <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/14"></a>
                     <div class="portfolio-overlay-details">
-                      <h5 class="text-white fw-400">Project Title</h5>
-                      <span class="text-light">Category</span> </div>
+                      <h5 class="text-white fw-400">Stock Automation</h5>
+                      <span class="text-light">Automation</span> </div>
                   </div>
                 </div>
               </div>
@@ -478,8 +478,8 @@
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/image5.jpg" alt="">
                   <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/15"></a>
                     <div class="portfolio-overlay-details">
-                      <h5 class="text-white fw-400">Project Title</h5>
-                      <span class="text-light">Category</span> </div>
+                      <h5 class="text-white fw-400">Image Recognition System</h5>
+                      <span class="text-light">Machine Learning</span> </div>
                   </div>
                 </div>
               </div>
@@ -490,8 +490,8 @@
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/image8.jpg" alt="">
                   <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/16"></a>
                     <div class="portfolio-overlay-details">
-                      <h5 class="text-white fw-400">Project Title</h5>
-                      <span class="text-light">Category</span> </div>
+                      <h5 class="text-white fw-400">Saudi Map Automated Scraping</h5>
+                      <span class="text-light">Automation</span> </div>
                   </div>
                 </div>
               </div>
@@ -502,8 +502,8 @@
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/image9.jpg" alt="">
                   <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/17"></a>
                     <div class="portfolio-overlay-details">
-                      <h5 class="text-white fw-400">Project Title</h5>
-                      <span class="text-light">Category</span> </div>
+                      <h5 class="text-white fw-400">Data Analysis</h5>
+                      <span class="text-light">Machine Learning</span> </div>
                   </div>
                 </div>
               </div>
@@ -514,8 +514,8 @@
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="images/image7.jpg" alt="">
                   <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/18"></a>
                     <div class="portfolio-overlay-details">
-                      <h5 class="text-white fw-400">Project Title</h5>
-                      <span class="text-light">Category</span> </div>
+                      <h5 class="text-white fw-400">SEO based Automation System</h5>
+                      <span class="text-light">Machine Learning</span> </div>
                   </div>
                 </div>
               </div>
