--- a/index.html
+++ b/index.html
@@ -262,7 +262,6 @@
                 <div class="featured-box style-3 mb-5">
                   <div class="featured-box-icon text-primary bg-white shadow-sm rounded"><img src="images/libraries/icons8-django-50.png" alt=""></div>
                   <h3>Django</h3>
-                  <!-- <p class="mb-0">Crafting Seamless Web Experiences with Python: Empowering the Digital World, One Backend at a Time.</p> -->
                 </div>
               </div>
               <div class="col-md-3 col-sm-6 p-2">
@@ -298,8 +297,8 @@
 
               <div class="col-md-3 col-sm-6 p-2 ">
                 <div class="featured-box style-3 mb-5">
-                  <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <img src="images/libraries/pandas.png" alt=""></div>
-                  <h3>Pandas</h3>
+                  <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <img src="images/libraries/tensorflow.png" alt=""></div>
+                  <h3>TensorFlow</h3>
                 </div>
               </div>
 
@@ -373,15 +372,16 @@
             <div class="progress progress-sm mb-4">
               <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <p class="text-dark fw-500 text-start mb-2">Data Analytics <span class="float-end">90%</span></p>
+            <p class="text-dark fw-500 text-start mb-2">Natural Language Processing <span class="float-end">75%</span></p>
             <div class="progress progress-sm mb-4">
               <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <p class="text-dark fw-500 text-start mb-2">Automation & Scripting <span class="float-end">90%</span></p>
+            <p class="text-dark fw-500 text-start mb-2">Computer Vision <span class="float-end">75%</span></p>
             <div class="progress progress-sm mb-4">
               <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
+
           <div class="col-md-6">
             <p class="text-dark fw-500 text-start mb-2">Backend Developement <span class="float-end">80%</span></p>
             <div class="progress progress-sm mb-4">
@@ -391,7 +391,7 @@
             <div class="progress progress-sm mb-4">
               <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <p class="text-dark fw-500 text-start mb-2">Web Scraping <span class="float-end">95%</span></p>
+            <p class="text-dark fw-500 text-start mb-2">Web Scraping & Automation <span class="float-end">95%</span></p>
             <div class="progress progress-sm mb-4">
               <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -402,8 +402,7 @@
     </section>
     <!-- Resume end --> 
     
-    <!-- Portfolio
-    ============================================= -->
+    <!-- Portfolio -->
     <section id="portfolio" class="section bg-light">
       <div class="container px-lg-5"> 
         <!-- Heading -->
