--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <div class="featured-box style-3 mb-0">
                   <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <i class="fa-solid fa-cloud fa-fade"></i> </div>
                   <h3>Cloud Computing</h3>
-                  <p class="mb-0">Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
+                  <p class="mb-0">Empowering Innovation Through Cloud Excellence.</p>
                 </div>
               </div>
             </div>
