--- a/index.html
+++ b/index.html
@@ -349,13 +349,13 @@
           <div class="col-md-6">
             <h2 class="text-6 fw-600 mb-4">Experience</h2>
             <div class="bg-white border rounded p-4 mb-4">
-              <p class="badge bg-primary text-2 fw-400">2022 - On Going</p>
+              <p class="badge bg-primary text-2 fw-400">2022 - Present</p>
               <h3 class="text-5">Python Developer</h3>
               <p class="text-danger">Stampa Solutions</p>
               <p class="mb-0">Machine Learning, Backend Developement, Web automation, Bash Scripting</p>
             </div>
             <div class="bg-white border rounded p-4 mb-4">
-              <p class="badge bg-primary text-2 fw-400">2020 - On Going</p>
+              <p class="badge bg-primary text-2 fw-400">2020 - Present</p>
               <h3 class="text-5">Python Developer</h3>
               <p class="text-danger">Fiverr/Upwork</p>
               <p class="mb-0">Data Analysis, Machine Learning, Backend Developement, Web automation and Scraping</p>
